Done with images.

--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -614,25 +614,11 @@ sorting the members and selecting the next one in the list.
 \aosafigure{cluster-images/active.png}{Active}{500l.cluster.active}
 
 Finally, when a node joins the network, the bootstrap role sends a
-\texttt{Join} message. The replica responds with a \texttt{Welcome}
-message containing its most recent state, allowing the new node to come
-up to speed quickly.
+\texttt{Join} message (\aosafigref{500l.cluster.bootstrap}.) The replica
+responds with a \texttt{Welcome} message containing its most recent
+state, allowing the new node to come up to speed quickly.
 
-\begin{verbatim}
-
-  Bootstrap   -------    Replica   Replica   Replica
-      *-->>--/ Join /-------+---------+---------+
-      :      -------        :         :         :
-      :     ----------      :         :         :
-      +----/ Welcome /--<<--*         :         :
-           ----------                 :         :
-                 ----------           :         :
-      +---------/ Welcome /----<<-----*         :
-                ----------                      :
-                      ----------                :
-      +--------------/ Welcome /------<<--------*
-                     ----------
-\end{verbatim}
+\aosafigure{cluster-images/bootstrap.png}{Bootstrap}{500l.cluster.bootstrap}
 
 \begin{verbatim}
 
@@ -823,30 +809,14 @@ class Leader(Role):
 \end{verbatim}
 
 The leader creates a scout role when it wants to become active, in
-response to receiving a \texttt{Propose} when it is inactive. The scout
-sends (and re-sends, if necessary) a \texttt{Prepare} message, and
-collects \texttt{Promise} responses until it has heard from a majority
-of its peers or until it has been preempted. It communicates the result
-back to the leader with an \texttt{Adopted} or \texttt{Preempted}
-message, respectively.
+response to receiving a \texttt{Propose} when it is inactive
+(\aosafigref{500l.cluster.leaderscout}.) The scout sends (and re-sends,
+if necessary) a \texttt{Prepare} message, and collects \texttt{Promise}
+responses until it has heard from a majority of its peers or until it
+has been preempted. It communicates the result back to the leader with
+an \texttt{Adopted} or \texttt{Preempted} message, respectively.
 
-\begin{verbatim}
-
-                             Scout        ----------     Acceptor        Acceptor        Acceptor
-                               *--->>----/ Prepare /--------+---------------+---------------+
-                               :         ----------         :               :               :
-                               :       ----------           :               :               :
-                               +------/ Promise /----<<-----*               :               :
-                               :      ----------                            :               :
-                               :                  ----------                :               :
-                               +-----------------/ Promise /-------<<-------*               :
-                               :                 ----------                                 :
-                               :                              ----------                    :
-                               +-----------------------------/ Promise /---------<<---------*
-    Leader    ----------       :                             ---------- 
-      +------/ Adopted /---<<--*
-             ----------   
-\end{verbatim}
+\aosafigure{cluster-images/leaderscout.png}{Scout}{500l.cluster.leaderscout}
 
 \begin{verbatim}
 
@@ -901,29 +871,14 @@ class Scout(Role):
 \end{verbatim}
 
 The leader creates a commander role for each slot where it has an active
-proposal. Like a scout, a commander sends and re-sends \texttt{Accept}
-messages and waits for a majority of acceptors to reply with
-\texttt{Accepted}, or for news of its preemption. When a proposal is
-accepted, the commander broadcasts a \texttt{Decision} message to all
-nodes. It responds to the leader with either \texttt{Decided} or
-\texttt{Preempted}.
+proposal (\aosafigref{500l.cluster.leadercommander}.) Like a scout, a
+commander sends and re-sends \texttt{Accept} messages and waits for a
+majority of acceptors to reply with \texttt{Accepted}, or for news of
+its preemption. When a proposal is accepted, the commander broadcasts a
+\texttt{Decision} message to all nodes. It responds to the leader with
+either \texttt{Decided} or \texttt{Preempted}.
 
-\begin{verbatim}
-                           Commander      ---------      Acceptor        Acceptor        Acceptor
-                               *--->>----/ Accept /---------+---------------+---------------+
-                               :         ---------          :               :               :
-                               :       -----------          :               :               :
-                               +------/ Accepted /---<<-----*               :               :
-                               :      -----------                           :               :
-                               :                  -----------               :               :
-                               +-----------------/ Accepted /------<<-------*               :
-                               :                 -----------                                :
-                               :                              -----------                   :
-                               +-----------------------------/ Accepted /--------<<---------*
-    Leader    ----------       :                             -----------
-      +------/ Decided /---<<--*
-             ----------   
-\end{verbatim}
+\aosafigure{cluster-images/leadercommander.png}{Commander}{500l.cluster.leadercommander}
 
 \begin{verbatim}
 
