--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -99,10 +99,12 @@ the Paxos algorithm.
 
 Paxos was described by Leslie Lamport in a fanciful paper, first
 submitted in 1990 and eventually published in 1998, entitled ``The
-Part-Time Parliament''. Lamport's paper has a great deal more detail
-than we will get into here, and is a fun read. The references at the end
-of the chapter describe some extensions of the algorithm that we have
-adapted in this implementation.
+Part-Time Parliament''\footnote{Leslie Lamport. The part-time
+  parliament. ACM Transactions on Computer Systems, 16(2):133--169, May
+  1998.}. Lamport's paper has a great deal more detail than we will get
+into here, and is a fun read. The references at the end of the chapter
+describe some extensions of the algorithm that we have adapted in this
+implementation.
 
 The simplest form of Paxos provides a way for a set of servers to agree
 on one value, for all time. Multi-Paxos builds on this foundation by
@@ -1581,26 +1583,25 @@ The result was far too large for this book!
 
 \aosasecti{References}\label{references}
 
-\begin{aosaitemize}
-
-\item
-  Lamport - ``The Part-Time Parliament''
-\item
-  Lamport - ``Paxos Made Simple''
-\item
-  Renesse - ``Paxos Made Moderately Complex'' (the origin of the role
-  names)
-\item
-  Chandra, Griesemer, and Redstone - ``Paxos Made Live - An Engineering
-  Perspective'' (regarding snapshots, in particular)
-\item
-  Mazieres - ``Paxos Made Practical'' (view changes, although not of the
-  type described here)
-\item
-  Liskov - ``From Viewstamped Replication to Byzantine Fault Tolerance''
-  (another, different look at view changes)
-\item
-  http://stackoverflow.com/questions/21353312/in-part-time-parliament-why-does-using-the-membership-from-decree-n-3-work-to
-\end{aosaitemize}
+In addition to the original Paxos paper and Lamport's follow-up ``Paxos
+Made Simple''\footnote{Leslie Lamport. Paxos Made Simple. ACM SIGACT
+  News (Distributed Computing Column) 32, 4 (Whole Number 121, December
+  2001) 51-58.}, our implementation added extensions that were informed
+by several other resources. The role names were taken from ``Paxos Made
+Moderately Complex''\footnote{Renesse - ``Paxos Made Moderately
+  Complex'' (the origin of the role names)}. ``Paxos Made
+Live''\footnote{Chandra, Griesemer, and Redstone - ``Paxos Made Live -
+  An Engineering Perspective'' (regarding snapshots, in particular)} was
+helpful regarding snapshots in particular, and ``Paxos Made
+Practical''\footnote{Mazieres - ``Paxos Made Practical'' (view changes,
+  although not of the type described here)} described view changes
+(although not of the type described here.) Liskov's ``From Viewstamped
+Replication to Byzantine Fault Tolerance''\footnote{Liskov - ``From
+  Viewstamped Replication to Byzantine Fault Tolerance'' (another,
+  different look at view changes)} provided yet another perspective on
+view changes. Finally, a
+\href{http://stackoverflow.com/questions/21353312/in-part-time-parliament-why-does-using-the-membership-from-decree-n-3-work-to}{Stack
+Overflow discussion} was helpful in learning how members are added and
+removed from participating.
 
 \end{aosachapter}
