--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -99,12 +99,12 @@ the Paxos algorithm.
 
 Paxos was described by Leslie Lamport in a fanciful paper, first
 submitted in 1990 and eventually published in 1998, entitled ``The
-Part-Time Parliament''\footnote{Leslie Lamport. The part-time
-  parliament. ACM Transactions on Computer Systems, 16(2):133--169, May
-  1998.}. Lamport's paper has a great deal more detail than we will get
-into here, and is a fun read. The references at the end of the chapter
-describe some extensions of the algorithm that we have adapted in this
-implementation.
+Part-Time Parliament''\footnote{L. Lamport, ``The Part-Time
+  Parliament,'' ACM Transactions on Computer Systems, 16(2):133--169,
+  May 1998.}. Lamport's paper has a great deal more detail than we will
+get into here, and is a fun read. The references at the end of the
+chapter describe some extensions of the algorithm that we have adapted
+in this implementation.
 
 The simplest form of Paxos provides a way for a set of servers to agree
 on one value, for all time. Multi-Paxos builds on this foundation by
@@ -1584,24 +1584,26 @@ The result was far too large for this book!
 \aosasecti{References}\label{references}
 
 In addition to the original Paxos paper and Lamport's follow-up ``Paxos
-Made Simple''\footnote{Leslie Lamport. Paxos Made Simple. ACM SIGACT
+Made Simple''\footnote{L. Lamport, ``Paxos Made Simple,'' ACM SIGACT
   News (Distributed Computing Column) 32, 4 (Whole Number 121, December
   2001) 51-58.}, our implementation added extensions that were informed
 by several other resources. The role names were taken from ``Paxos Made
-Moderately Complex''\footnote{Renesse - ``Paxos Made Moderately
-  Complex'' (the origin of the role names)}. ``Paxos Made
-Live''\footnote{Chandra, Griesemer, and Redstone - ``Paxos Made Live -
-  An Engineering Perspective'' (regarding snapshots, in particular)} was
-helpful regarding snapshots in particular, and ``Paxos Made
-Practical''\footnote{Mazieres - ``Paxos Made Practical'' (view changes,
-  although not of the type described here)} described view changes
-(although not of the type described here.) Liskov's ``From Viewstamped
-Replication to Byzantine Fault Tolerance''\footnote{Liskov - ``From
-  Viewstamped Replication to Byzantine Fault Tolerance'' (another,
-  different look at view changes)} provided yet another perspective on
+Moderately Complex''\footnote{R. Van Renesse and D. Altinbuken, ``Paxos
+  Made Moderately Complex,'' ACM Computing Survey 47, 3, Article 42
+  (February 2015)}. ``Paxos Made Live''\footnote{T. Chandra, R.
+  Griesemer, and J. Redstone, ``Paxos Made Live - An Engineering
+  Perspective,'' Proceedings of the twenty-sixth annual ACM symposium on
+  Principles of distributed computing (PODC '07). ACM, New York, NY,
+  USA, 398-407.} was helpful regarding snapshots in particular, and
+``Paxos Made Practical''\footnote{http://www.scs.stanford.edu/\textasciitilde{}dm/home/papers/paxos.pdf}
+described view changes (although not of the type described here.)
+Liskov's ``From Viewstamped Replication to Byzantine Fault
+Tolerance''\footnote{B. Liskov. From viewstamped replication to
+  byzantine fault tolerance. In \emph{Replication}. Springer-Verlag,
+  Berlin, Heidelberg 121-149 (2010)} provided yet another perspective on
 view changes. Finally, a
 \href{http://stackoverflow.com/questions/21353312/in-part-time-parliament-why-does-using-the-membership-from-decree-n-3-work-to}{Stack
 Overflow discussion} was helpful in learning how members are added and
-removed from participating.
+removed from the system.
 
 \end{aosachapter}
