Done images -- need to check line widths.

--- a/tex/cluster.tex
+++ b/tex/cluster.tex
@@ -1598,8 +1598,8 @@ Moderately Complex''\footnote{R. Van Renesse and D. Altinbuken, ``Paxos
 ``Paxos Made Practical''\footnote{http://www.scs.stanford.edu/\textasciitilde{}dm/home/papers/paxos.pdf}
 described view changes (although not of the type described here.)
 Liskov's ``From Viewstamped Replication to Byzantine Fault
-Tolerance''\footnote{B. Liskov. From viewstamped replication to
-  byzantine fault tolerance. In \emph{Replication}. Springer-Verlag,
+Tolerance''\footnote{B. Liskov, ``From Viewstamped Replication to
+  Byzantine Fault Tolerance,'' In \emph{Replication}, Springer-Verlag,
   Berlin, Heidelberg 121-149 (2010)} provided yet another perspective on
 view changes. Finally, a
 \href{http://stackoverflow.com/questions/21353312/in-part-time-parliament-why-does-using-the-membership-from-decree-n-3-work-to}{Stack
