--- a/tex/spreadsheet.tex
+++ b/tex/spreadsheet.tex
@@ -393,14 +393,10 @@ four tasks:
   the current state.
 \end{aosaitemize}
 
-The flowchart below shows the controller-worker interaction in more
-detail:
+The flowchart in \aosafigref{500l.spreadsheet.flowchart} shows the
+controller-worker interaction in more detail:
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{./images/00-flowchart.png}
-\caption{Controller-Worker Flowchart}
-\end{figure}
+\aosafigure{spreadsheet-images/00-flowchart.png}{Controller-Worker Flowchart}{500l.spreadsheet.flowchart}
 
 Now let's walk through the code. In the first line, we request the JS
 model \texttt{\$scope} object from AngularJS:
