--- a/tex/pedometer.tex
+++ b/tex/pedometer.tex
@@ -49,11 +49,12 @@ in that direction at a specific point in time. Acceleration is measured
 in units of g-force, or \emph{g}. One \emph{g} is equal to 9.8 $m/s^2$,
 the average acceleration due to gravity on Earth.
 
-The diagram below shows an example acceleration signal from an
-accelerometer with the three time series.
+\aosafigref{500l.pedometer.accelerationtotal} shows an example
+acceleration signal from an accelerometer with the three time series.
 
-\includegraphics{chapter-figures/acceleration-total.png}\\ The
-\emph{sampling rate} of the accelerometer, which can often be
+\aosafigure{pedometer-images/acceleration-total.png}{Example acceleration signal}{500l.pedometer.accelerationtotal}
+
+The \emph{sampling rate} of the accelerometer, which can often be
 calibrated, determines the number of measurements per second. For
 instance, an accelerometer with a sampling rate of 100 returns 100 data
 points for each $x$, $y$, and $z$ time series every second.
@@ -78,10 +79,11 @@ pedometer can count steps by counting the number of bounces in the
 direction of gravity.}
 
 Let's look at a person walking with an accelerometer-equipped smartphone
-in his or her shirt pocket, as depicted below.
+in his or her shirt pocket (\aosafigref{500l.pedometer.walk1}).
 
-\includegraphics{chapter-figures/walk-1.png}\\ For the sake of
-simplicity, we'll assume that the person:
+\aosafigure{pedometer-images/walk-1.png}{Walking}{500l.pedometer.walk1}
+
+For the sake of simplicity, we'll assume that the person:
 
 \begin{aosaitemize}
 
@@ -117,9 +119,11 @@ direction is the one that gravity is acting on. Gravity will pull our
 phone in the negative $z$ direction, so our accelerometer, \emph{even
 when perfectly still}, will record an acceleration of 9.8 $m/s^2$ in the
 negative $z$ direction. Accelerometer data from our phone in this
-orientation looks like the graph below.
+orientation is shown in
+\aosafigref{500l.pedometer.accelerationtotalphonestill}.
 
-\includegraphics{chapter-figures/acceleration-total-phone-still.png}\\
+\aosafigure{pedometer-images/acceleration-total-phone-still.png}{Example accelerometer data at rest}{500l.pedometer.accelerationtotalphonestill}
+
 Note that $x(t)$ and $y(t)$ remain constant at 0, while $z(t)$ is
 constant at -1 \emph{g}. Our accelerometer records all acceleration,
 including gravitational acceleration.
@@ -134,11 +138,13 @@ However, when the user is moving with the device, user acceleration is
 rarely constant, since it's difficult for a person to move with a
 constant acceleration.
 
-\includegraphics{chapter-figures/component-signals-2.png}\\ To count
-steps, we're interested in the bounces created by the user in the
-direction of gravity. That means we're interested in isolating the
+\aosafigure{pedometer-images/component-signals-2.png}{Component signals}{500l.pedometer.componentsignals}
+
+To count steps, we're interested in the bounces created by the user in
+the direction of gravity. That means we're interested in isolating the
 1-dimensional time series which describes \textbf{user acceleration in
-the direction of gravity} from our 3-dimensional acceleration signal.
+the direction of gravity} from our 3-dimensional acceleration signal
+(\aosafigref{500l.pedometer.componentsignals}).
 
 In our simple example, gravitational acceleration is 0 in $x(t)$ and
 $z(t)$ and constant at 9.8 $m/s^2$ in $y(t)$. Therefore, in our total
@@ -161,21 +167,25 @@ Creatures}\label{people-are-complicated-creatures}
 
 What if a person carries the phone in a bag on their shoulder, with the
 phone in a more wonky position? To make matters worse, what if the phone
-rotates in the bag part way through the walk?
+rotates in the bag part way through the walk, as in
+\aosafigref{500l.pedometer.walk2}?
 
-\includegraphics{chapter-figures/walk-2.png}\\ Yikes. Now all three of
-our components have a non-zero gravitational acceleration, so the user
-acceleration in the direction of gravity is now split amongst all three
-time series. To determine user acceleration in the direction of gravity,
-we first have to determine which direction gravity is acting in. To do
-this, we have to split total acceleration in each of the three time
-series into a user acceleration time series and a gravitational
-acceleration time series.
+\aosafigure[133pt]{pedometer-images/walk-2.png}{A more complicated walk}{500l.pedometer.walk2}
 
-\includegraphics{chapter-figures/component-signals-3.png}\\ Then we can
-isolate the portion of user acceleration in each component that is in
-the direction of gravity, resulting in just the user acceleration in the
-direction of gravity time series.
+Yikes. Now all three of our components have a non-zero gravitational
+acceleration, so the user acceleration in the direction of gravity is
+now split amongst all three time series. To determine user acceleration
+in the direction of gravity, we first have to determine which direction
+gravity is acting in. To do this, we have to split total acceleration in
+each of the three time series into a user acceleration time series and a
+gravitational acceleration time series
+(\aosafigref{500l.pedometer.component3}).
+
+\aosafigure{pedometer-images/component-signals-3.png}{More complicated component signals}{500l.pedometer.component3}
+
+Then we can isolate the portion of user acceleration in each component
+that is in the direction of gravity, resulting in just the user
+acceleration in the direction of gravity time series.
 
 Let's define this as two steps below:
 
@@ -221,13 +231,15 @@ while user acceleration is not.
 For each component, we can pass total acceleration through a low-pass
 filter, and we'll be left with just the gravitational acceleration time
 series. Then we can subtract gravitational acceleration from total
-acceleration, and we'll have the user acceleration time series.
+acceleration, and we'll have the user acceleration time series
+(\aosafigref{500l.pedometer.lowpass}).
 
-\includegraphics{chapter-figures/low-pass-filter-a.png}\\ There are
-numerous varieties of filters. The one we'll use is called an infinite
-impulse response (IIR) filter. We've chosen an IIR filter because of its
-low overhead and ease of implementation. The IIR filter we've chosen is
-implemented using the formula
+\aosafigure[240pt]{pedometer-images/low-pass-filter-a.png}{A low-pass filter}{500l.pedometer.lowpass}
+
+There are numerous varieties of filters. The one we'll use is called an
+infinite impulse response (IIR) filter. We've chosen an IIR filter
+because of its low overhead and ease of implementation. The IIR filter
+we've chosen is implemented using the formula
 $output_{i} = \alpha_{0}(input_{i}\beta_{0} + input_{i-1}\beta_{1} + input_{i-2}\beta_{2} - output_{i-1}\alpha_{1} - output_{i-2}\alpha_{2})$.
 
 The design of digital filters is outside of the scope of this chapter,
@@ -264,19 +276,21 @@ example. We'll split:
 We'll initialize the first two values of gravitational acceleration to
 0, so that the formula has initial values to work with.
 
-$x_{g}(0) = x_{g}(1) = y_{g}(0) = y_{g}(1) = z_{g}(0) = z_{g}(1) = 0$
+\[x_{g}(0) = x_{g}(1) = y_{g}(0) = y_{g}(1) = z_{g}(0) = z_{g}(1) = 0\]
 
 Then we'll implement the filter formula for each time series.
 
-$x_{g}(t) = \alpha_{0}(x(t)\beta_{0} + x(t-1)\beta_{1} + x(t-2)\beta_{2} - x_{g}(t-1)\alpha_{1} - x_{g}(t-2)\alpha_{2})$
+\[x_{g}(t) = \alpha_{0}(x(t)\beta_{0} + x(t-1)\beta_{1} + x(t-2)\beta_{2} - x_{g}(t-1)\alpha_{1} - x_{g}(t-2)\alpha_{2})\]
 
-$y_{g}(t) = \alpha_{0}(y(t)\beta_{0} + y(t-1)\beta_{1} + y(t-2)\beta_{2} - y_{g}(t-1)\alpha_{1} - y_{g}(t-2)\alpha_{2})$
+\[y_{g}(t) = \alpha_{0}(y(t)\beta_{0} + y(t-1)\beta_{1} + y(t-2)\beta_{2} - y_{g}(t-1)\alpha_{1} - y_{g}(t-2)\alpha_{2})\]
 
-$z_{g}(t) = \alpha_{0}(z(t)\beta_{0} + z(t-1)\beta_{1} + z(t-2)\beta_{2} - z_{g}(t-1)\alpha_{1} - z_{g}(t-2)\alpha_{2})$
+\[z_{g}(t) = \alpha_{0}(z(t)\beta_{0} + z(t-1)\beta_{1} + z(t-2)\beta_{2} - z_{g}(t-1)\alpha_{1} - z_{g}(t-2)\alpha_{2})\]
 
-The resulting time series after low-pass filtering are below.
+The resulting time series after low-pass filtering are in
+\aosafigref{500l.pedometer.accelerationgravitational}.
 
-\includegraphics{chapter-figures/acceleration-gravitational.png}\\
+\aosafigure{pedometer-images/acceleration-gravitational.png}{Example acceleration signal}{500l.pedometer.accelerationgravitational}
+
 $x_{g}(t)$ and $z_{g}(t)$ hover around 0, and $y_{g}(t)$ very quickly
 drops to $-1g$. The initial 0 value in $y_{g}(t)$ is from the
 initialization of the formula.
@@ -292,11 +306,12 @@ y_{u}(t) = y(t) - y_{g}(t)
 z_{u}(t) = z(t) - z_{g}(t)
 \]
 
-When we do that, we receive the time series below:
+The result is the time series seen in
+\aosafigref{500l.pedometer.accelerationuser}. We've successfully split
+our total acceleration into user acceleration and gravitational
+acceleration!
 
-\includegraphics{chapter-figures/acceleration-user.png}\\ We've
-successfully split our total acceleration into user acceleration and
-gravitational acceleration!
+\aosafigure{pedometer-images/acceleration-user.png}{Split acceleration}{500l.pedometer.accelerationuser}
 
 \aosasectii{2. Isolating User Acceleration in the Direction of
 Gravity}\label{isolating-user-acceleration-in-the-direction-of-gravity}
@@ -317,26 +332,29 @@ introduced to the \emph{dot product}, one of the fundamental tools used
 in comparing the magnitude and direction of $x$, $y$, and $z$
 coordinates.
 
-The dot product will take us from 3-dimensional space to 1-dimensional
-space. When we take the dot product of the two time series, user
-acceleration and gravitational acceleration, both of which are in
-3-dimensional space, we'll be left with a single time series in
-1-dimensional space representing the portion of user acceleration in the
-direction of gravity. We'll arbitrarily call this new time series
-$a(t)$, because, well, every important time series deserves a name.
+The dot product takes us from 3-dimensional space to 1-dimensional space
+(\aosafigref{500l.pedometer.dotproduct}). When we take the dot product
+of the two time series, user acceleration and gravitational
+acceleration, both of which are in 3-dimensional space, we'll be left
+with a single time series in 1-dimensional space representing the
+portion of user acceleration in the direction of gravity. We'll
+arbitrarily call this new time series $a(t)$, because, well, every
+important time series deserves a name.
 
-\includegraphics{chapter-figures/dot-product-explanation.png}\\
+\aosafigure{pedometer-images/dot-product-explanation.png}{The dot product}{500l.pedometer.dotproduct}
 
 \aosasectiii{Implementing the Dot
 Product}\label{implementing-the-dot-product}
 
 We can implement the dot product for our earlier example using the
 formula $a(t) = x_{u}(t)x_{g}(t) + y_{u}(t)y_{g}(t) + z_{u}(t)z_{g}(t)$,
-leaving us with $a(t)$ in 1-dimensional space.
+leaving us with $a(t)$ in 1-dimensional space
+(\aosafigref{500l.pedometer.accelerationdotproduct}).
 
-\includegraphics{chapter-figures/acceleration-dotproduct.png}\\ We can
-now visually pick out where the steps are in $a(t)$. The dot product is
-very powerful, yet beautifully simple.
+\aosafigure{pedometer-images/acceleration-dotproduct.png}{Implementing the dot product}{500l.pedometer.accelerationdotproduct}
+
+We can now visually pick out where the steps are in $a(t)$. The dot
+product is very powerful, yet beautifully simple.
 
 \aosasectii{Solutions in the Real
 World}\label{solutions-in-the-real-world}
@@ -346,10 +364,11 @@ we threw in the challenges of the real world and real people. However,
 we're getting a lot closer to counting steps, and we can see how $a(t)$
 is starting to resemble our ideal sine wave. But, only ``kinda, sorta''
 starting to. We still need to make our messy $a(t)$ time series
-smoother. There are four main issues with $a(t)$ in its current state.
+smoother. There are four main issues
+(\aosafigref{500l.pedometer.problems}) with $a(t)$ in its current state.
 Let's examine each one.
 
-\includegraphics{chapter-figures/jumpy-slow-short-bumpy.png}\\
+\aosafigure{pedometer-images/jumpy-slow-short-bumpy.png}{Jumpy, slow, short, bumpy}{500l.pedometer.problems}
 
 \aosasectiii{1. Jumpy Peaks}\label{jumpy-peaks}
 
@@ -383,8 +402,8 @@ Our pedometer should accommodate many people with different walks, so
 we've set minimum and maximum step frequencies based on a large sample
 size of people and walks. This means that we may sometimes filter
 slightly too much or too little. While we'll often have fairly smooth
-peaks, we can, once in a while, get a ``bumpier'' peak. The diagram
-above zooms in on one such peak.
+peaks, we can, once in a while, get a ``bumpier'' peak.
+\aosafigref{500l.pedometer.problems} zooms in on one such peak.
 
 When bumpiness occurs at our threshold, we can mistakenly count too many
 steps for one peak. We'll use a method called \emph{hysteresis} to
@@ -397,9 +416,12 @@ each step only once.
 \aosasectiii{Peaks That Are Juuuust
 Right}\label{peaks-that-are-juuuust-right}
 
-\includegraphics{chapter-figures/acceleration-filtered.png}\\ In
-accounting for these four scenarios, we've managed to bring our messy
-$a(t)$ fairly close to our ideal sine wave, allowing us to count steps.
+\aosafigure{pedometer-images/acceleration-filtered.png}{Tweaked peaks}{500l.pedometer.accelerationfiltered}
+
+In accounting for these four scenarios, we've managed to bring our messy
+$a(t)$ fairly close to our ideal sine wave
+(\aosafigref{500l.pedometer.accelerationfiltered}), allowing us to count
+steps.
 
 \aosasectii{Recap}\label{recap}
 
@@ -581,12 +603,14 @@ formats and fit them into a standard format as soon as possible,
 allowing the rest of the program to work with this new standard format.
 Our solution requires that we work with user acceleration and
 gravitational acceleration separately, so our standard format will need
-to be split into the two accelerations:
+to be split into the two accelerations
+(\aosafigref{500l.pedometer.standardformat}).
 
-\includegraphics{chapter-figures/standard-format.png}\\ Our standard
-format allows us to store a time series, as each element represents
-acceleration at a point in time. We've defined it as an array of arrays
-of arrays. Let's peel that onion.
+\aosafigure{pedometer-images/standard-format.png}{Standard format}{500l.pedometer.standardformat}
+
+Our standard format allows us to store a time series, as each element
+represents acceleration at a point in time. We've defined it as an array
+of arrays of arrays. Let's peel that onion.
 
 \begin{aosaitemize}
 
@@ -611,11 +635,14 @@ information on the trial walk itself (sampling rate, actual steps taken,
 etc.). Our system will apply the signal processing solution, and output
 the number of steps calculated, the delta between the actual steps and
 calculated steps, the distance travelled, and the elapsed time. The
-entire process from input to output can be viewed as a pipeline.
+entire process from input to output can be viewed as a pipeline
+(\aosafigref{500l.pedometer.pipeline}).
 
-\includegraphics{chapter-figures/pipeline.png}\\ In the spirit of
-separation of concerns, we'll write the code for each distinct component
-of the pipeline --- parsing, processing, and analyzing --- individually.
+\aosafigure{pedometer-images/pipeline.png}{The pipeline}{500l.pedometer.pipeline}
+
+In the spirit of separation of concerns, we'll write the code for each
+distinct component of the pipeline --- parsing, processing, and
+analyzing --- individually.
 
 \aosasectii{Parsing}\label{parsing}
 
@@ -627,10 +654,11 @@ acceleration and gravitational acceleration, which means that if our
 data is in the combined format, our parser will need to first pass it
 through a low-pass filter to convert it to the standard format.
 
-\includegraphics{chapter-figures/input-data-workflow-1.png}\\ In the
-future, if we ever have to add another input format, the only code we'll
-have to touch is this parser. Let's separate concerns once more, and
-create a \texttt{Parser} class to handle the parsing.
+\aosafigure{pedometer-images/input-data-workflow-1.png}{Initial workflow}{500l.pedometer.input1}
+
+In the future, if we ever have to add another input format, the only
+code we'll have to touch is this parser. Let's separate concerns once
+more, and create a \texttt{Parser} class to handle the parsing.
 
 \begin{verbatim}
 class Parser
@@ -743,10 +771,12 @@ We'll handle short and bumpy peaks by avoiding them during step
 counting.
 
 Now that we have our data in the standard format, we can process it to
-get in into a state where we can analyze it to count steps.
+get in into a state where we can analyze it to count steps
+(\aosafigref{500l.pedometer.input2}).
 
-\includegraphics{chapter-figures/input-data-workflow-2.png}\\ The
-purpose of processing is to take our data in the standard format and
+\aosafigure{pedometer-images/input-data-workflow-2.png}{Processing}{500l.pedometer.input2}
+
+The purpose of processing is to take our data in the standard format and
 incrementally clean it up to get it to a state as close as possible to
 our ideal sine wave. Our two processing operations, taking the dot
 product and filtering, are quite distinct, but both are intended to
@@ -1142,22 +1172,25 @@ perspective before we dive into the code.
 
 When a user first enters the app by navigating to \texttt{/uploads},
 they see a table of existing data and a form to submit new data by
-uploading an accelerometer output file and trial and user information.
+uploading an accelerometer output file and trial and user information
+(\aosafigref{500l.pedometer.app1}).
 
-\includegraphics{chapter-figures/graffles/app1.png}\\ Submitting the
-form stores the data to the file system, parses, processes, and analyzes
-it, and redirects back to \texttt{/uploads} with the new entry in the
-table.
+\aosafigure{pedometer-images/app1.png}{Upload view}{500l.pedometer.accelerationtotal}
+
+Submitting the form stores the data to the file system, parses,
+processes, and analyzes it, and redirects back to \texttt{/uploads} with
+the new entry in the table.
 
 Clicking the \textbf{Detail} link for an entry presents the user with
-the following view:
+the following view in \aosafigref{500l.pedometer.app3}.
 
-\includegraphics{chapter-figures/graffles/app3.png}\\ The information
-presented includes values input by the user through the upload form,
-values calculated by our program, and graphs of the time series
-following the dot product operation, and again following filtering. The
-user can navigate back to \texttt{/uploads} using the \emph{Back to
-Uploads} link.
+\aosafigure{pedometer-images/app3.png}{Detail view}{500l.pedometer.app3}
+
+The information presented includes values input by the user through the
+upload form, values calculated by our program, and graphs of the time
+series following the dot product operation, and again following
+filtering. The user can navigate back to \texttt{/uploads} using the
+\emph{Back to Uploads} link.
 
 Let's look at what the outlined functionality above implies for us,
 technically. We'll need two major components that we don't yet have:
