Need to fix html build bug, good otherwise.

--- a/tex/pedometer.tex
+++ b/tex/pedometer.tex
@@ -81,7 +81,7 @@ direction of gravity.}
 Let's look at a person walking with an accelerometer-equipped smartphone
 in his or her shirt pocket (\aosafigref{500l.pedometer.walk1}).
 
-\aosafigure{pedometer-images/walk-1.png}{Walking}{500l.pedometer.walk1}
+\aosafigure[240pt]{pedometer-images/walk-1.png}{Walking}{500l.pedometer.walk1}
 
 For the sake of simplicity, we'll assume that the person:
 
@@ -1175,7 +1175,7 @@ they see a table of existing data and a form to submit new data by
 uploading an accelerometer output file and trial and user information
 (\aosafigref{500l.pedometer.app1}).
 
-\aosafigure{pedometer-images/app1.png}{Upload view}{500l.pedometer.accelerationtotal}
+\aosafigure{pedometer-images/app1.png}{Upload view}{500l.pedometer.app1}
 
 Submitting the form stores the data to the file system, parses,
 processes, and analyzes it, and redirects back to \texttt{/uploads} with
