Be more explicit in example.

--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -262,6 +262,24 @@
 
 \include{interpreter}
 
+\include{static-analysis}
+
+\include{functionalDB}
+
+\include{template-engine}
+
+\include{spreadsheet}
+
+\include{cluster}
+
+\include{data-store}
+
+\include{objmodel}
+
+\include{crawler}
+
+\include{modeller}
+
 
 \bibliographystyle{alpha}
 
