--- a/tex/blockcode.tex
+++ b/tex/blockcode.tex
@@ -20,7 +20,7 @@ constructs and libraries of the language right in the list of blocks.
 Further, blocks can be localized into any human language without
 changing the meaning of the programming language.
 
-\aosafigure[360pt]{blockcode-images/blockcode_ide.png}{The Blockcode IDE in use}{500l.blockcode.ide}
+\aosafigure[240pt]{blockcode-images/blockcode_ide.png}{The Blockcode IDE in use}{500l.blockcode.ide}
 
 Block-based languages have a long history, with some of the prominent
 ones being \href{http://www.lego.com/en-us/mindstorms/}{Lego
@@ -194,7 +194,7 @@ added to the block menu, it is associated with a JavaScript function to
 implement the language, so each block in the script has to be able to
 find its associated function and call it when the script runs.
 
-\aosafigure[360pt]{blockcode-images/block.png}{An example block}{500l.blockcode.block}
+\aosafigure[180pt]{blockcode-images/block.png}{An example block}{500l.blockcode.block}
 
 Blocks have two optional bits of structure. They can have a single
 numeric parameter (with a default value), and they can be a container
@@ -233,15 +233,20 @@ of arguments, or more than one argument, the code would have to change.
 
 \begin{verbatim}
     function createBlock(name, value, contents){
-        var item = elem('div', {'class': 'block', draggable: true, 'data-name': name}, [name]);
+        var item = elem('div', 
+            {'class': 'block', draggable: true, 'data-name': name}, 
+            [name]
+        );
         if (value !== undefined && value !== null){
             item.appendChild(elem('input', {type: 'number', value: value}));
         }
         if (Array.isArray(contents)){
-            item.appendChild(elem('div', {'class': 'container'}, contents.map(function(block){
+            item.appendChild(
+                elem('div', {'class': 'container'}, contents.map(function(block){
                 return createBlock.apply(null, block);
             })));
-        }else if (typeof contents === 'string'){ // Add units (degrees, etc.) specifier
+        }else if (typeof contents === 'string'){ 
+            // Add units (degrees, etc.) specifier
             item.appendChild(document.createTextNode(' ' + contents));
         }
         return item;
@@ -281,7 +286,9 @@ We have some utilities for handling blocks as DOM elements:
     }
 
     function blockUnits(block){
-        if (block.children.length > 1 && block.lastChild.nodeType === Node.TEXT_NODE && block.lastChild.textContent){
+        if (block.children.length > 1 && 
+            block.lastChild.nodeType === Node.TEXT_NODE && 
+            block.lastChild.textContent){
             return block.lastChild.textContent.slice(1);
         }
     }
@@ -367,8 +374,10 @@ around a bug.
         }
         evt.target.classList.add('dragging');
         dragTarget = evt.target;
-        scriptBlocks = [].slice.call(document.querySelectorAll('.script .block:not(.dragging)'));
-        // For dragging to take place in Firefox, we have to set this, even if we don't use it
+        scriptBlocks = [].slice.call(
+            document.querySelectorAll('.script .block:not(.dragging)'));
+        // For dragging to take place in Firefox, we have to set this, even if
+        // we don't use it
         evt.dataTransfer.setData('text/html', evt.target.outerHTML);
         if (matches(evt.target, '.menu .block')){
             evt.dataTransfer.effectAllowed = 'copy';
@@ -385,10 +394,14 @@ highlighting valid drop targets, etc. Of these, we only make use of
 
 \begin{verbatim}
     function dragOver(evt){
-        if (!matches(evt.target, '.menu, .menu *, .script, .script *, .content')) return;
-        if (evt.preventDefault) { evt.preventDefault(); } // Necessary. Allows us to drop.
+        if (!matches(evt.target, '.menu, .menu *, .script, .script *, .content')) {
+            return;
+        }
+        // Necessary. Allows us to drop.
+        if (evt.preventDefault) { evt.preventDefault(); } 
         if (dragType === 'menu'){
-            evt.dataTransfer.dropEffect = 'copy';  // See the section on the DataTransfer object.
+            // See the section on the DataTransfer object.
+            evt.dataTransfer.dropEffect = 'copy';  
         }else{
             evt.dataTransfer.dropEffect = 'move';
         }
@@ -407,16 +420,19 @@ the script when it changes.
 \begin{verbatim}
     function drop(evt){
         if (!matches(evt.target, '.menu, .menu *, .script, .script *')) return;
-        var dropTarget = closest(evt.target, '.script .container, .script .block, .menu, .script');
+        var dropTarget = closest(
+            evt.target, '.script .container, .script .block, .menu, .script');
         var dropType = 'script';
         if (matches(dropTarget, '.menu')){ dropType = 'menu'; }
-        if (evt.stopPropagation) { evt.stopPropagation(); } // stops the browser from redirecting.
+        // stops the browser from redirecting.
+        if (evt.stopPropagation) { evt.stopPropagation(); } 
         if (dragType === 'script' && dropType === 'menu'){
             trigger('blockRemoved', dragTarget.parentElement, dragTarget);
             dragTarget.parentElement.removeChild(dragTarget);
         }else if (dragType ==='script' && dropType === 'script'){
             if (matches(dropTarget, '.block')){
-                dropTarget.parentElement.insertBefore(dragTarget, dropTarget.nextSibling);
+                dropTarget.parentElement.insertBefore(
+                    dragTarget, dropTarget.nextSibling);
             }else{
                 dropTarget.insertBefore(dragTarget, dropTarget.firstChildElement);
             }
@@ -425,7 +441,8 @@ the script when it changes.
             var newNode = dragTarget.cloneNode(true);
             newNode.classList.remove('dragging');
             if (matches(dropTarget, '.block')){
-                dropTarget.parentElement.insertBefore(newNode, dropTarget.nextSibling);
+                dropTarget.parentElement.insertBefore(
+                    newNode, dropTarget.nextSibling);
             }else{
                 dropTarget.insertBefore(newNode, dropTarget.firstChildElement);
             }
@@ -525,7 +542,8 @@ can get work done in that call.
         if (scriptDirty){
             scriptDirty = false;
             Block.trigger('beforeRun', script);
-            var blocks = [].slice.call(document.querySelectorAll('.script > .block'));
+            var blocks = [].slice.call(
+                document.querySelectorAll('.script > .block'));
             Block.run(blocks);
             Block.trigger('afterRun', script);
         }else{
@@ -582,7 +600,7 @@ It exposes no functions to the rest of the code, so nothing else can
 depend on it. This way we can swap out the one file to create a new
 block language and know nothing in the core will break.
 
-\aosafigure[360pt]{blockcode-images/turtle_example.png}{Example of Turtle code running}{500l.blockcode.turtle}
+\aosafigure[240pt]{blockcode-images/turtle_example.png}{Example of Turtle code running}{500l.blockcode.turtle}
 
 Turtle programming is a style of graphics programming, first popularized
 by Logo, where you have an imaginary turtle carrying a pen walking on
