Changes for early-access release.

--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,7 +260,27 @@
 \mainmatter
 
 
-\include{contingent}
+\include{interpreter}
+
+\include{static-analysis}
+
+\include{functionalDB}
+
+\include{template-engine}
+
+\include{pedometer}
+
+\include{spreadsheet}
+
+\include{cluster}
+
+\include{data-store}
+
+\include{objmodel}
+
+\include{crawler}
+
+\include{modeller}
 
 
 \bibliographystyle{alpha}
