--- a/tex/pedometer.tex
+++ b/tex/pedometer.tex
@@ -239,8 +239,11 @@ acceleration, and we'll have the user acceleration time series
 There are numerous varieties of filters. The one we'll use is called an
 infinite impulse response (IIR) filter. We've chosen an IIR filter
 because of its low overhead and ease of implementation. The IIR filter
-we've chosen is implemented using the formula
-$output_{i} = \alpha_{0}(input_{i}\beta_{0} + input_{i-1}\beta_{1} + input_{i-2}\beta_{2} - output_{i-1}\alpha_{1} - output_{i-2}\alpha_{2})$.
+we've chosen is implemented using the formula:
+
+\[
+output_{i} = \alpha_{0}(input_{i}\beta_{0} + input_{i-1}\beta_{1} + input_{i-2}\beta_{2} - output_{i-1}\alpha_{1} - output_{i-2}\alpha_{2})$
+\]
 
 The design of digital filters is outside of the scope of this chapter,
 but a very short teaser discussion is warranted. It's a well-studied,
@@ -576,7 +579,9 @@ Data in the combined format is total acceleration in the $x$, $y$, and
 $z$ directions, over time. $x$, $y$, and $z$ values will be separated by
 a comma, and samples per unit time will be separated by a semi-colon.
 
-\["x1,y1,z1; ... xn,yn,zn;"\]
+\[
+x_1,y_1,z_1; \ldots x_n,y_n,z_n;
+\]
 
 \aosasectiii{Separated Format}\label{separated-format}
 
@@ -585,7 +590,9 @@ acceleration in the $x$, $y$, and $z$ directions, over time. User
 acceleration values will be separated from gravitational acceleration
 values by a pipe.
 
-\["x^{u}\_1,y^u\_1,z^u\_1|x\^g_1,y^g\_1,z^g\_1; \ldots x^u\_n,y^u\_n,z^u\_n|x^g\_n,y^g\_n,z^g\_n;"\]
+\[
+x^{u}_1,y^{u}_1,z^{u}_1 \vert x^{g}_1,y^{g}_1,z^{g}_1; \ldots x^{u}_n,y^{u}_n,z^{u}_n \vert x^{g}_n,y^{g}_n,z^{g}_n;
+\]
 
 \aosasectii{I Got Multiple Input Formats But a Standard Ain't
 One}\label{i-got-multiple-input-formats-but-a-standard-aint-one}
