--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,27 +260,7 @@
 \mainmatter
 
 
-\include{interpreter}
-
-\include{static-analysis}
-
-\include{functionalDB}
-
-\include{template-engine}
-
-\include{pedometer}
-
-\include{spreadsheet}
-
-\include{cluster}
-
-\include{data-store}
-
-\include{objmodel}
-
-\include{crawler}
-
-\include{modeller}
+\include{dagoba}
 
 
 \bibliographystyle{alpha}
